--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -93,50 +93,50 @@ steps:
 - name: gcr.io/cloud-builders/bazel
   args: ['run', '--host_force_python=PY2', '//java:java8']
 - name: gcr.io/cloud-builders/docker
-  args: ['tag', 'bazel/java:java8', 'gcr.io/$PROJECT_ID/java:latest']
+  args: ['tag', 'bazel/java:java8_debian9', 'gcr.io/$PROJECT_ID/java:latest']
 - name: gcr.io/cloud-builders/docker
-  args: ['tag', 'bazel/java:java8', 'gcr.io/$PROJECT_ID/java:8']
+  args: ['tag', 'bazel/java:java8_debian9', 'gcr.io/$PROJECT_ID/java:8']
 
 - name: gcr.io/cloud-builders/bazel
   args: ['run', '--host_force_python=PY2', '//java:java8_debug']
 - name: gcr.io/cloud-builders/docker
-  args: ['tag', 'bazel/java:java8_debug', 'gcr.io/$PROJECT_ID/java:debug']
+  args: ['tag', 'bazel/java:java8_debug_debian9', 'gcr.io/$PROJECT_ID/java:debug']
 - name: gcr.io/cloud-builders/docker
-  args: ['tag', 'bazel/java:java8_debug', 'gcr.io/$PROJECT_ID/java:8-debug']
+  args: ['tag', 'bazel/java:java8_debug_debian9', 'gcr.io/$PROJECT_ID/java:8-debug']
 
 - name: gcr.io/cloud-builders/bazel
   args: ['run', '--host_force_python=PY2', '//java:java11']
 - name: gcr.io/cloud-builders/docker
-  args: ['tag', 'bazel/java:java11', 'gcr.io/$PROJECT_ID/java:11']
+  args: ['tag', 'bazel/java:java11_debian9', 'gcr.io/$PROJECT_ID/java:11']
 
 - name: gcr.io/cloud-builders/bazel
   args: ['run', '--host_force_python=PY2', '//java:java11_debug']
 - name: gcr.io/cloud-builders/docker
-  args: ['tag', 'bazel/java:java11_debug', 'gcr.io/$PROJECT_ID/java:11-debug']
+  args: ['tag', 'bazel/java:java11_debug_debian9', 'gcr.io/$PROJECT_ID/java:11-debug']
 
 - name: gcr.io/cloud-builders/bazel
   args: ['run', '--host_force_python=PY2', '//java/jetty:jetty_java8']
 - name: gcr.io/cloud-builders/docker
-  args: ['tag', 'bazel/java/jetty:jetty_java8', 'gcr.io/$PROJECT_ID/java/jetty:latest']
+  args: ['tag', 'bazel/java/jetty:jetty_java8_debian9', 'gcr.io/$PROJECT_ID/java/jetty:latest']
 - name: gcr.io/cloud-builders/docker
-  args: ['tag', 'bazel/java/jetty:jetty_java8', 'gcr.io/$PROJECT_ID/java/jetty:java8']
+  args: ['tag', 'bazel/java/jetty:jetty_java8_debian9', 'gcr.io/$PROJECT_ID/java/jetty:java8']
 
 - name: gcr.io/cloud-builders/bazel
   args: ['run', '--host_force_python=PY2', '//java/jetty:jetty_java8_debug']
 - name: gcr.io/cloud-builders/docker
-  args: ['tag', 'bazel/java/jetty:jetty_java8_debug', 'gcr.io/$PROJECT_ID/java/jetty:debug']
+  args: ['tag', 'bazel/java/jetty:jetty_java8_debug_debian9', 'gcr.io/$PROJECT_ID/java/jetty:debug']
 - name: gcr.io/cloud-builders/docker
-  args: ['tag', 'bazel/java/jetty:jetty_java8_debug', 'gcr.io/$PROJECT_ID/java/jetty:java8-debug']
+  args: ['tag', 'bazel/java/jetty:jetty_java8_debug_debian9', 'gcr.io/$PROJECT_ID/java/jetty:java8-debug']
 
 - name: gcr.io/cloud-builders/bazel
   args: ['run', '--host_force_python=PY2', '//java/jetty:jetty_java11']
 - name: gcr.io/cloud-builders/docker
-  args: ['tag', 'bazel/java/jetty:jetty_java11', 'gcr.io/$PROJECT_ID/java/jetty:java11']
+  args: ['tag', 'bazel/java/jetty:jetty_java11_debian9', 'gcr.io/$PROJECT_ID/java/jetty:java11']
 
 - name: gcr.io/cloud-builders/bazel
   args: ['run', '--host_force_python=PY2', '//java/jetty:jetty_java11_debug']
 - name: gcr.io/cloud-builders/docker
-  args: ['tag', 'bazel/java/jetty:jetty_java11_debug', 'gcr.io/$PROJECT_ID/java/jetty:java11-debug']
+  args: ['tag', 'bazel/java/jetty:jetty_java11_debug_debian9', 'gcr.io/$PROJECT_ID/java/jetty:java11-debug']
 
 - name: gcr.io/cloud-builders/bazel
   args: ['run', '--host_force_python=PY2', '//experimental/python3:python3_debian9']
