--- a/examples/python2.7/BUILD
+++ b/examples/python2.7/BUILD
@@ -1,3 +1,6 @@
+# Public notice: this file is for internal documentation, testing, and
+# reference only. Note that repo maintainers can freely change any part of the
+# repository code at any time.
 load("@io_bazel_rules_docker//python:image.bzl", "py_image")
 load("@io_bazel_rules_docker//container:container.bzl", "container_image")
 
