--- a/examples/go/BUILD
+++ b/examples/go/BUILD
@@ -1,3 +1,6 @@
+# Public notice: this file is for internal documentation, testing, and
+# reference only. Note that repo maintainers can freely change any part of the
+# repository code at any time.
 package(default_visibility = ["//visibility:public"])
 
 # Go boilerplate
