Fix dpkg_parser.par shebang

--- a/package_manager/BUILD
+++ b/package_manager/BUILD
@@ -3,6 +3,10 @@ load("@subpar//:subpar.bzl", "par_binary")
 par_binary(
     name = "dpkg_parser",
     srcs = glob(["**/*.py"]),
+    compiler_args = [
+        "--interpreter",
+        "/usr/bin/env python",
+    ],
     main = "dpkg_parser.py",
     deps = [
         ":parse_metadata",
