--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,17 +1,20 @@
 timeout: 1800s
 steps:
 
-# Publishing base, cc, and static as latest is handled in a separate release process
 - name: gcr.io/cloud-builders/bazel
   args: ['run', '--host_force_python=PY2', '//base:static_debian9']
 - name: gcr.io/cloud-builders/docker
   args: ['tag', 'bazel/base:static_debian9', 'gcr.io/$PROJECT_ID/static-debian9:${COMMIT_SHA}']
 - name: gcr.io/cloud-builders/docker
   args: ['tag', 'gcr.io/$PROJECT_ID/static-debian9:${COMMIT_SHA}', 'gcr.io/$PROJECT_ID/static:${COMMIT_SHA}']
+- name: gcr.io/cloud-builders/docker
+  args: ['tag', 'gcr.io/$PROJECT_ID/static-debian9:${COMMIT_SHA}', 'gcr.io/$PROJECT_ID/static-debian9:latest']
 - name: gcr.io/cloud-builders/bazel
   args: ['run', '--host_force_python=PY2', '//base:static_debian10']
 - name: gcr.io/cloud-builders/docker
   args: ['tag', 'bazel/base:static_debian10', 'gcr.io/$PROJECT_ID/static-debian10:${COMMIT_SHA}']
+- name: gcr.io/cloud-builders/docker
+  args: ['tag', 'gcr.io/$PROJECT_ID/static-debian10:${COMMIT_SHA}', 'gcr.io/$PROJECT_ID/static-debian10:latest']
 
 - name: gcr.io/cloud-builders/bazel
   args: ['run', '--host_force_python=PY2', '//base:static-nonroot_debian9']
@@ -30,10 +33,14 @@ steps:
   args: ['tag', 'bazel/base:base_debian9', 'gcr.io/$PROJECT_ID/base-debian9:${COMMIT_SHA}']
 - name: gcr.io/cloud-builders/docker
   args: ['tag', 'gcr.io/$PROJECT_ID/base-debian9:${COMMIT_SHA}', 'gcr.io/$PROJECT_ID/base:${COMMIT_SHA}']
+- name: gcr.io/cloud-builders/docker
+  args: ['tag', 'gcr.io/$PROJECT_ID/base-debian9:${COMMIT_SHA}', 'gcr.io/$PROJECT_ID/base-debian9:latest']
 - name: gcr.io/cloud-builders/bazel
   args: ['run', '--host_force_python=PY2', '//base:base_debian10']
 - name: gcr.io/cloud-builders/docker
   args: ['tag', 'bazel/base:base_debian10', 'gcr.io/$PROJECT_ID/base-debian10:${COMMIT_SHA}']
+- name: gcr.io/cloud-builders/docker
+  args: ['tag', 'gcr.io/$PROJECT_ID/base-debian10:${COMMIT_SHA}', 'gcr.io/$PROJECT_ID/base-debian10:latest']
 
 - name: gcr.io/cloud-builders/bazel
   args: ['run', '--host_force_python=PY2', '//base:base-nonroot_debian9']
@@ -74,10 +81,14 @@ steps:
   args: ['tag', 'bazel/cc:cc_debian9', 'gcr.io/$PROJECT_ID/cc-debian9:${COMMIT_SHA}']
 - name: gcr.io/cloud-builders/docker
   args: ['tag', 'gcr.io/$PROJECT_ID/cc-debian9:${COMMIT_SHA}', 'gcr.io/$PROJECT_ID/cc:${COMMIT_SHA}']
+- name: gcr.io/cloud-builders/docker
+  args: ['tag', 'gcr.io/$PROJECT_ID/cc-debian9:${COMMIT_SHA}', 'gcr.io/$PROJECT_ID/cc-debian9:latest']
 - name: gcr.io/cloud-builders/bazel
   args: ['run', '--host_force_python=PY2', '//cc:cc_debian10']
 - name: gcr.io/cloud-builders/docker
   args: ['tag', 'bazel/cc:cc_debian10', 'gcr.io/$PROJECT_ID/cc-debian10:${COMMIT_SHA}']
+- name: gcr.io/cloud-builders/docker
+  args: ['tag', 'gcr.io/$PROJECT_ID/cc-debian10:${COMMIT_SHA}', 'gcr.io/$PROJECT_ID/cc-debian10:latest']
 
 - name: gcr.io/cloud-builders/bazel
   args: ['run', '--host_force_python=PY2', '//cc:debug_debian9']
