--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -95,7 +95,9 @@ steps:
     #!/bin/sh
     set -o errexit
     set -o xtrace
+    docker tag bazel/java:java_base_debian9                 gcr.io/$PROJECT_ID/java:base
     docker tag bazel/java:java_base_debian9                 gcr.io/$PROJECT_ID/java-debian9:base
+    docker tag bazel/java:java_base_debug_debian9           gcr.io/$PROJECT_ID/java:base-debug
     docker tag bazel/java:java_base_debug_debian9           gcr.io/$PROJECT_ID/java-debian9:base-debug
     docker tag bazel/java:java8_debian9                     gcr.io/$PROJECT_ID/java:latest
     docker tag bazel/java:java8_debian9                     gcr.io/$PROJECT_ID/java:8
