--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -71,6 +71,10 @@ steps:
     #!/bin/sh
     set -o errexit
     set -o xtrace
+    bazel run --host_force_python=PY2 //java:java_base_debian9
+    bazel run --host_force_python=PY2 //java:java_base_debug_debian9
+    bazel run --host_force_python=PY2 //java:java_base_debian10
+    bazel run --host_force_python=PY2 //java:java_base_debug_debian10
     bazel run --host_force_python=PY2 //java:java8_debian9
     bazel run --host_force_python=PY2 //java:java8_debug_debian9
     bazel run --host_force_python=PY2 //java:java11_debian9
@@ -91,6 +95,10 @@ steps:
     #!/bin/sh
     set -o errexit
     set -o xtrace
+    docker tag bazel/java:java_base_debian9                 gcr.io/$PROJECT_ID/java:base
+    docker tag bazel/java:java_base_debian9                 gcr.io/$PROJECT_ID/java-debian9:base
+    docker tag bazel/java:java_base_debug_debian9           gcr.io/$PROJECT_ID/java:base-debug
+    docker tag bazel/java:java_base_debug_debian9           gcr.io/$PROJECT_ID/java-debian9:base-debug
     docker tag bazel/java:java8_debian9                     gcr.io/$PROJECT_ID/java:latest
     docker tag bazel/java:java8_debian9                     gcr.io/$PROJECT_ID/java:8
     docker tag bazel/java:java8_debian9                     gcr.io/$PROJECT_ID/java-debian9:latest
@@ -103,6 +111,8 @@ steps:
     docker tag bazel/java:java11_debian9                    gcr.io/$PROJECT_ID/java-debian9:11
     docker tag bazel/java:java11_debug_debian9              gcr.io/$PROJECT_ID/java:11-debug
     docker tag bazel/java:java11_debug_debian9              gcr.io/$PROJECT_ID/java-debian9:11-debug
+    docker tag bazel/java:java_base_debian10                gcr.io/$PROJECT_ID/java-debian10:base
+    docker tag bazel/java:java_base_debug_debian10          gcr.io/$PROJECT_ID/java-debian10:base-debug
     docker tag bazel/java:java11_debian10                   gcr.io/$PROJECT_ID/java-debian10:latest
     docker tag bazel/java:java11_debian10                   gcr.io/$PROJECT_ID/java-debian10:11
     docker tag bazel/java:java11_debug_debian10             gcr.io/$PROJECT_ID/java-debian10:debug
@@ -239,12 +249,18 @@ images:
   - 'gcr.io/$PROJECT_ID/java:8-debug'
   - 'gcr.io/$PROJECT_ID/java:11'
   - 'gcr.io/$PROJECT_ID/java:11-debug'
+  - 'gcr.io/$PROJECT_ID/java:base'
+  - 'gcr.io/$PROJECT_ID/java:base-debug'
+  - 'gcr.io/$PROJECT_ID/java-debian9:base'
+  - 'gcr.io/$PROJECT_ID/java-debian9:base-debug'
   - 'gcr.io/$PROJECT_ID/java-debian9:latest'
   - 'gcr.io/$PROJECT_ID/java-debian9:8'
   - 'gcr.io/$PROJECT_ID/java-debian9:debug'
   - 'gcr.io/$PROJECT_ID/java-debian9:8-debug'
   - 'gcr.io/$PROJECT_ID/java-debian9:11'
   - 'gcr.io/$PROJECT_ID/java-debian9:11-debug'
+  - 'gcr.io/$PROJECT_ID/java-debian10:base'
+  - 'gcr.io/$PROJECT_ID/java-debian10:base-debug'
   - 'gcr.io/$PROJECT_ID/java-debian10:latest'
   - 'gcr.io/$PROJECT_ID/java-debian10:11'
   - 'gcr.io/$PROJECT_ID/java-debian10:debug'
