--- a/.github/workflows/update-deb-package-snapshots.yml
+++ b/.github/workflows/update-deb-package-snapshots.yml
@@ -12,9 +12,12 @@ jobs:
     steps:
     - name: Checkout
       uses: actions/checkout@v2
+      with:
+        # https://github.com/puppetlabs/peter-evans-create-pull-request/blob/master/docs/concepts-guidelines.md#push-using-ssh-deploy-keys
+        ssh-key: ${{ secrets.ACTIONS_KEY }}
         
     - name: Setup Bazel
-      uses: abhinavsingh/setup-bazel@v3
+      uses: abhinavsingh/setup-bazel@1fe920bf5df3791aab606c06a3608f4bb600c4f2
       with:
         version: 3.4.1
 
@@ -22,7 +25,7 @@ jobs:
       run: ./updateWorkspaceSnapshots.sh
     
     - name: Create Pull Request
-      uses: peter-evans/create-pull-request@v3
+      uses: peter-evans/create-pull-request@7380612b49221684fefa025244f2ef4008ae50ad
       with:
         commit-message: "Bumping packages to latest stable versions"
         title: "Bumping packages to latest stable versions"
